--- a/F6-resume-02-2016/scss/_styles.scss
+++ b/F6-resume-02-2016/scss/_styles.scss
@@ -1,5 +1,5 @@
 body {
-	
+	max-width: 100vw;
 }
 
 // Font-sizes from 10 through 30 
@@ -447,13 +447,6 @@ section {
 					float: right;
 				}
 			}
-			p.success{
-				color: $ka-4;
-				font: {
-					weight: bold;
-					size: rem-calc(18);
-				} 
-			}
 		}
 		input, textarea{
 			background-color: transparent;
@@ -480,6 +473,13 @@ section {
 		}
 		textarea{
 			min-height: rem-calc(150);
+		}
+		p.thanks{
+			color: $ka-4;
+			font: {
+				weight: bold;
+				size: rem-calc(18);
+			} 
 		}
 	}
 }
@@ -636,7 +636,7 @@ footer{
 }
 
 @include breakpoint(small only) {
-	#menu, #IN-widget{
+	#menu, .IN-widget{
 		display: none !important;
 	}
 	section{
